--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -11,13 +11,34 @@
     h1 {
       margin-top: 0;
       font-size: 68.94px;
+      font-family: "Ondo";
+      text-transform: uppercase;
     }
     p {
       font-size: 18.72px;
       color: #fff;
       font-weight: 400;
     }
+    .btns {
+      margin-bottom: 30px;
+    }
+    .statsContainer {
+      column-gap: 30px;
+      display: flex;
+      .stat {
+        margin-bottom: 5px;
+        font-weight: 800;
+        font-size: 30px;
+        color: #fff;
+        text-align: center;
+      }
+    }
+    .descr {
+      font-size: 18.72px;
+      font-weight: 400;
+    }
   }
+
   .artboardCont {
     background-image: url("../../assets/board.png");
     background-color: #2d1e6b;
