Complete call to action secion

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,8 +10,9 @@
 body {
   font-family: "Lato", sans-serif;
 }
+
 .appContainer {
   .sub-container {
-    background: #2d1e6b;
+    margin-bottom: 140px;
   }
 }
