--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@use '../../common.scss';
+
 .btn {
 	background: transparent;
 	border: none;
@@ -39,18 +41,9 @@
 	}
 
 	&.outline {
-		background-image: url('../../assets/gradient.png');
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-blend-mode: overlay;
+		@extend .textBlend;
 		z-index: 0;
-		background-position-y: center;
 		height: 72px;
-
-		color: transparent;
-		-webkit-text-fill-color: transparent;
-		-webkit-background-clip: text;
-		background-clip: text;
 
 		&::after {
 			transform: skewX(-20deg);
