--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -1,4 +1,9 @@
+@use '../../common.scss';
+
 .filtersContainer {
+	position: relative;
+	padding-top: 90px;
+
 	h2 {
 		font-size: 66px;
 		font-weight: 800;
@@ -11,13 +16,7 @@
 		margin: 0 auto 40px;
 
 		> span {
-			background-image: url('../../assets/gradient.png');
-			background-size: cover;
-			background-repeat: no-repeat;
-			color: transparent;
-			-webkit-text-fill-color: transparent;
-			-webkit-background-clip: text;
-			background-clip: text;
+			@extend .textBlend;
 		}
 	}
 
@@ -43,5 +42,14 @@
 		gap: 40px 0;
 		padding: 0 84px;
 		margin-bottom: 38px;
+	}
+
+	.circle {
+		@extend .shadowCircle;
+		top: unset;
+		bottom: -84px;
+		left: -82px;
+		height: 521px;
+		width: 521px;
 	}
 }
