--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -1,12 +1,16 @@
 .testimonialContainer {
-	padding-top: 95px;
+	padding-top: 70px;
 	margin-bottom: 60px;
 	overflow-x: clip;
 
 	.container {
 		max-width: 1325px;
 		position: relative;
-		margin: 0 auto 165px;
+		margin: 0 auto 195px;
+	}
+
+	.sliderCard {
+		padding-top: 45px;
 	}
 
 	.card {
