--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,93 +1,114 @@
 .footerCont {
-  padding-top: 50px;
-  .footerBackground {
-    background-image: url("../../assets/background.png");
-    background-color: #2d1e6b;
-    background-blend-mode: color-dodge;
-    height: 888px;
-    background-size: auto;
-    margin-top: -91px;
-    background-repeat: no-repeat;
-  }
-  .alignLinks {
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 18px;
-    .footer {
-      .logoContainer {
-        display: flex;
-        align-items: center;
-        column-gap: 4px;
-        margin-bottom: 40px;
+	padding-top: 133px;
+	position: relative;
+	margin-top: -38px;
+	padding-bottom: 43px;
+	.footerBackground {
+		background-image: url('../../assets/background.png');
+		background-color: #2d1e6b;
+		background-blend-mode: color-dodge;
+		background-size: auto;
+		background-repeat: no-repeat;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: -1;
+		height: 100%;
+	}
+	.alignLinks {
+		display: flex;
+		margin-bottom: 18px;
+		padding-left: 142px;
+		column-gap: 98px;
 
-        .logo {
-          width: 45.75px;
-          height: 34.86px;
-        }
+		.links {
+			display: flex;
+			column-gap: 70px;
+		}
 
-        .title {
-          width: 98px;
-          height: 34px;
-          font-weight: 800;
-          font-size: 30.77px;
-          line-height: 34.03px;
-          color: #fff;
-        }
-      }
-      .paragraph {
-        max-width: 315px;
-        p {
-          font-size: 16px;
-          font-weight: 400;
-          color: #fff;
-          line-height: 29.62px;
-        }
-      }
-    }
+		.footer {
+			.logoContainer {
+				display: flex;
+				align-items: center;
+				column-gap: 4px;
+				margin-bottom: 40px;
 
-    .link {
-      .heading {
-        color: #fff;
-        margin-bottom: 10px;
-      }
-      ul {
-        display: inline;
-        li {
-          list-style: none;
-          margin-bottom: 30px;
+				.logo {
+					width: 45.75px;
+					height: 34.86px;
+				}
 
-          a {
-            text-decoration: none;
-            color: #fff;
-          }
-        }
-      }
-    }
-  }
+				.title {
+					width: 98px;
+					height: 34px;
+					font-weight: 800;
+					font-size: 30.77px;
+					line-height: 34.03px;
+					color: #fff;
+				}
+			}
+			.paragraph {
+				max-width: 315px;
+				p {
+					font-size: 16px;
+					font-weight: 400;
+					color: #fff;
+					line-height: 29.62px;
+					letter-spacing: 1px;
+				}
+			}
+		}
 
-  .brands {
-    display: flex;
-    align-items: center;
-    column-gap: 70px;
-    padding-left: 142px;
-    margin-bottom: 60px;
-  }
-  .copyright {
-    display: flex;
-    padding-left: 160px;
-    margin-bottom: 43px;
-    align-items: center;
-    column-gap: 30px;
+		.link {
+			.heading {
+				color: #fff;
+				margin-bottom: 10px;
+				font-weight: 800;
+				font-size: 18px;
+				line-height: 19.91px;
+				letter-spacing: 1px;
+			}
+			.list {
+				display: inline;
+			}
+			.listItem {
+				list-style: none;
+				margin-bottom: 26px;
+				a {
+					text-decoration: none;
+					color: #fff;
+					font-weight: 400;
+					font-size: 16px;
+					line-height: 19.91px;
+					letter-spacing: 1px;
+				}
+			}
+		}
+	}
 
-    .socials {
-      display: flex;
-      column-gap: 10px;
-    }
-    .copTitle {
-      font-size: 14px;
-      color: #fff;
-      line-height: 24.3px;
-      font-weight: 400;
-    }
-  }
+	.brands {
+		display: flex;
+		align-items: center;
+		column-gap: 43px;
+		padding-left: 142px;
+		margin-bottom: 60px;
+	}
+	.copyright {
+		display: flex;
+		padding-left: 160px;
+		align-items: center;
+		column-gap: 30px;
+
+		.socials {
+			display: flex;
+			column-gap: 10px;
+		}
+		.copTitle {
+			font-size: 14px;
+			color: #fff;
+			line-height: 24.3px;
+			font-weight: 400;
+			letter-spacing: 1.5px;
+		}
+	}
 }
